--- a/package.json
+++ b/package.json
@@ -16,18 +16,26 @@
 
     "@testing-library/user-event": "^13.5.0",
 
+    "bootstrap": "^5.3.3",
+
     "http-proxy-middleware": "^3.0.3",
 
     "react": "^19.0.0",
 
+    "react-bootstrap": "^2.10.9",
+
     "react-dom": "^19.0.0",
+
+    "react-router-dom": "^7.3.0",
 
     "react-scripts": "5.0.1",
 
     "web-vitals": "^2.1.4"
 
-  }, "proxy": "http://localhost:8080",
- 
+  },
+
+  "proxy": "http://localhost:8080",
+
   "scripts": {
 
     "start": "react-scripts start",
@@ -75,5 +83,6 @@
     ]
 
   }
+
 }
 
