--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
 
     "@testing-library/user-event": "^13.5.0",
 
+    "axios": "^1.8.3",
+
     "bootstrap": "^5.3.3",
 
     "http-proxy-middleware": "^3.0.3",
