--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 
     "react-bootstrap": "^2.10.9",
 
+    "react-daum-postcode": "^3.2.0",
+
     "react-dom": "^19.0.0",
 
     "react-router-dom": "^7.3.0",
@@ -35,8 +37,6 @@
     "web-vitals": "^2.1.4"
 
   },
-
-  "proxy": "http://localhost:8080",
 
   "scripts": {
 
