--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
 
     "http-proxy-middleware": "^3.0.3",
 
+    "js-cookie": "^3.0.5",
+
     "react": "^19.0.0",
 
     "react-bootstrap": "^2.10.9",
