--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
 
     "react-scripts": "5.0.1",
 
+    "react-slick": "^0.30.3",
+
+    "slick-carousel": "^1.8.1",
+
     "web-vitals": "^2.1.4"
 
   },
